--- a/groupup/src/assets/main.css
+++ b/groupup/src/assets/main.css
@@ -77,3 +77,16 @@ outline: none;
 .classic-text{
   font-size: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+
+.text-input{
+  width: 80vw;
+}
+
+.small-title{
+  font-size: 8vw;
+  text-align: center;
+}
+
+} 
