--- a/groupup/src/assets/main.css
+++ b/groupup/src/assets/main.css
@@ -50,9 +50,9 @@ outline: none;
 }
 .classic-input{
   font-size: 30px;
-  padding: 0 20px;
-  background-color: #06D6A0;
-  border-radius: 2000px;
+  padding: 10px 20px;
+  background-color: #3C4048;
+  color: white;
   border: none;
   margin: 30px;
 }
